# ty

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  release-cli.yml
ty-cli/: Cargo.toml
ty-cli/src/: main.rs
ty-lib/: Cargo.toml
ty-lib/src/: bad_emoji_note  bad_note  good_emoji_note  good_note  lib.rs
ty-server/: Cargo.toml  Dockerfile  sqlx-data.json
ty-server/src/: main.rs
ty-spa/: Cargo.toml
ty-spa/src/: detail.rs  lib.rs  list.rs
ty-spa/static/: index.html
