[package]
name = "ty"
version = "0.1.1"
description = "A tool to say thank you."
readme = "../README.md"
repository = "https://github.com/pawe/ty"
license = "MIT OR Apache-2.0"
authors = ["Paul Weißenbach <paul.weissenbach@aon.at>"]
edition = "2018"

[dependencies]
ty-lib = { version = "0.1", path = "../ty-lib" }
dotenv = "0.15"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
validator = "0.12"
