[package]
name = "ty-lib"
version = "0.2.0"
description = "Shared data types for ty-cli and ty-server."
repository = "https://github.com/pawe/ty"
license = "MIT OR Apache-2.0"
authors = ["Paul Weißenbach <paul.weissenbach@aon.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.12", features = ["derive"] }

