[package]
name = "ty-spa"
version = "0.1.0"
authors = ["Paul Weißenbach <paul.weissenbach@aon.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.67"
