[package]
name = "ty-spa"
version = "0.2.0"
authors = ["Paul Weißenbach <paul.weissenbach@aon.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ty-lib = { path = "../ty-lib" }
yew = "0.17"
wasm-bindgen = "0.2.67"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.37"
urlencoding = "1.1.1"
lazy_static = "1.4.0"
comrak = "0.8"
